# build-bitcoin-in-rust

./: .gitignore  Cargo.toml
hello_world/src/: main.rs
lib/: Cargo.toml  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256_b.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
