[package]
name = "btclib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.5"
chrono = { version = "0.4.43", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["serde", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
thiserror = "1.0.61"
uint = "0.9.5"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
